--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "author": "Jackie Robson",
     "license": "MIT",
     "engines": {
-        "npm":"6.4.1",
-        "node":"11.1.0"
+        "npm": "6.4.1",
+        "node": "11.1.0"
     },
     "dependencies": {
         "babel-cli": "6.24.1",
@@ -15,6 +15,7 @@
         "babel-plugin-transform-class-properties": "6.24.1",
         "babel-preset-env": "1.5.2",
         "babel-preset-react": "6.24.1",
+        "compression": "^1.7.3",
         "css-loader": "0.28.4",
         "live-server": "^1.2.0",
         "node-sass": "4.5.3",
